--- a/views/update.hbs
+++ b/views/update.hbs
@@ -97,7 +97,7 @@
     </div>
 
     <div class="display mt-5">
-        <table>
+        <table style="width:50%">
         <tr>
             <td>Id</td>
             <td>Name</td>
