--- a/views/add.hbs
+++ b/views/add.hbs
@@ -48,9 +48,9 @@
     </header>
     <div class="menu">
         <div class="container">
-            <a href="http://localhost:5000" class="mr-5">Home</a>
-            <a href="http://localhost:5000/add" class="mr-5">Add New Product</a>
-            <a href="" class="mr-5">Update Product</a>
+            <a href="/" class="mr-5">Home</a>
+            <a href="/add" class="mr-5">Add New Product</a>
+            <a href="/update" class="mr-5">Update Product</a>
         </div>
     </div>
     <h2>ADD PRODUCT</h2>
